fixed overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -378,6 +378,9 @@ section .container {
   .sub-header {
     color: $green;
   }
+.anim-container{
+overflow: hidden;
+  }
   .anim-container .inner{
     height: 230px;
     margin: 0 auto;
